# MaterialTk

./: .gitignore  LICENSE  README.md  pyproject.toml
materialtk/: icon_definitions.py
